<resources>
    <string name="app_name">Walkess</string>
    <string name="action_settings">Settings</string>
    <string name="add_contacts">Add Contact</string>
    <string name="view_contacts">View Contacts</string>
    <string name="search_contact">Search Contact</string>
    <string name="update_contact">Update Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="sign_out">Sign Out</string>
    <string name="personal_contact">My Personal Contact</string>
    <string name="back">Back</string>
    <string name="title_activity_data_list">DataListActivity</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="submit">Submit</string>
    <string name="due_date">Due Date</string>
    <string name="search">search</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="time_now_click">Select the time now and clicked !</string>
    <string name="title_activity_maps">Map</string>
    <string name="sit_pet">Sit Pet</string>
    <string name="walking_dog">Walking Dog</string>
    <string name="camera">camera</string>

    <string name="get_location">Get Location</string>
    <string name="disconnect">Disconnect Service</string>
    <string name="connect">Connect Service</string>
    <string name="title_activity_map_fragment_class">Map</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_time">Select the Time</string>


    <string name="init_text">Time Picker</string>
    <string name="pick_time">Pick Time</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="appointment">Select/Dog/Pet</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button_dates">Date</string>
    <string name="button_times">Time</string>
    <string name="starting_point">Starting Point</string>
    <string name="returning_point">Returning Point</string>
    <string name="button_dog_pet">Select/Dog/Pet</string>




</resources>
